--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -837,8 +837,9 @@ input[value="aliciliniavopir@gmail.com"] {
   text-decoration: none;
   color: white; }
 
-.footer__game__container2 {
-  border-top: gray 1px solid; }
+.footer__game__container {
+  border-bottom: gray 1px solid;
+  padding-block-end: 1rem; }
 
 @media (min-width: 1100px) {
   .footer__game__container {
@@ -864,7 +865,6 @@ input[value="aliciliniavopir@gmail.com"] {
     display: flex; }
   .footer__game__container2 {
     display: flex;
-    border-top: gray 1px solid;
     justify-content: space-between; }
   .footer__game__navigation__security {
     margin-inline-end: 4rem; }
