--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -693,24 +693,25 @@ input[value="aliciliniavopir@gmail.com"] {
     min-height: 523px; }
   .game__fith__information {
     float: right;
-    margin-inline-start: 500px;
+    margin-inline-start: 644px;
     margin-block-start: 50px;
     margin-inline-end: 100px; }
   .game__fith__form {
-    margin-inline-start: 50px; }
+    margin-inline-start: auto;
+    padding-block-start: 3rem; }
   .button__container {
-    margin-inline-start: 3rem; }
+    margin-inline-start: 2rem; }
   .game__fith__form {
     display: flex;
-    margin-inline-start: 2rem; }
+    margin-inline-start: auto; }
   .game__email {
-    margin-inline-start: 10rem; }
+    margin-inline-start: auto; }
   .game__button__subscribe, input {
     min-width: 250px; }
   .game__button__subscribe {
     margin-block-start: 1rem; }
   .game__label {
-    margin-inline-start: 5rem; }
+    margin-inline-start: auto; }
   .input {
     padding-block-end: 30px;
     padding-block-start: 30px; } }
