Fixed width into %

--- a/scss/_fourth-section.scss
+++ b/scss/_fourth-section.scss
@@ -1,7 +1,7 @@
 .game__fourth__section {
     background-image: url(../css/images/rectangle.png);
     padding-inline-start: 16px;
-    min-height: 960px;
+    height: 100%;
   
 }
 
