Fixed the background

--- a/scss/_fourth-section.scss
+++ b/scss/_fourth-section.scss
@@ -1,5 +1,6 @@
 .game__fourth__section {
     background-image: url(../css/images/rectangle.png);
+    background-color: black;
     padding-inline-start: 16px;
     height: 100%;
   
