--- a/scss/_fith-section.scss
+++ b/scss/_fith-section.scss
@@ -104,8 +104,11 @@ input[value="aliciliniavopir@gmail.com"]{
         padding-bottom: 30px;
         padding-top: 1rem;
         min-height: 523px;
-       
    
+}
+
+input[value="aliciliniavopir@gmail.com"] {
+    margin-inline-start: -4rem;
 }
 
 .game__fith__information {
