Set the width and height in the body

--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -247,7 +247,11 @@ option {
     display: none; } }
 
 body {
-  margin: 0; }
+  margin: 0;
+  margin-inline-start: auto;
+  margin-inline-end: auto;
+  min-width: 223px;
+  max-height: 1442px; }
 
 .game__first__section--header {
   font-family: bebas-neue-bold;
