--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -1,3 +1,13 @@
+
+html {
+   
+}
+
 body {
     margin: 0;
+    margin-inline-start: auto;
+    margin-inline-end: auto;
+    min-width: 223px;
+    max-height: 1442px;
 }
+
